registry is the word

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
 <header>
   <hgroup>
     <h1>Outlet</h1>
-    <h2>The Heroku CLI Plugin Directory</h2>
+    <h2>The Heroku CLI Plugin Registry</h2>
   </hgroup>
 
   <nav>
