--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,11 @@
       document.querySelector('#repos thead').innerHTML = document.querySelector('#repos tfoot').innerHTML = Mustache.render(table_header_template, {});
 
       $("time.timeago").timeago()
+
+
+      // Adjust input to size of placeholder text
+      var input = document.querySelector("form.plugin input")
+      input.setAttribute('size',input.getAttribute('placeholder').length);
     })
   })
 </script>
@@ -75,7 +80,12 @@
 
   <nav>
     <ol>
-      <li><a href="#">Add a Plugin</a></li>
+      <li>
+        <form class="plugin" method="post" action="/plugins" >
+          <input type="text" name="repo" placeholder="user/repo or full GitHub URL">
+          <input type="submit" value="Add Plugin">
+        </form>
+      </li>
     </ol>
   </nav>
 </header>
